# GtkApplications

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
c/calculator/: Makefile
c/calculator/src/: calculator.c
c/helloworld/: CMakeLists.txt  Makefile
c/helloworld/src/: helloworld.c
cpp/: CMakeLists.txt
cpp/helloworld/: CMakeLists.txt  Makefile
cpp/helloworld/src/: helloworld.cpp  helloworld.h  main.cpp
python/: hello.py
